added presentation folder and video

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h5>A</h5>
       </li>
       <li class="collection-item">
-        <a href="#">Ava 🍑 </a>
+        <a href="#">Ava</a>
       </li>
       <li class="collection-item">
         <a href="#">Adam</a>
@@ -78,15 +78,8 @@
         <a href="#">Coutour </a>
       </li>
       <li class="collection-item">
-        <a href="#">Carolina 🔥🔥🔥</a>
+        <a href="#">Carolina</a>
       </li>
-      <li class="collection-item">
-        <a href="#">Christina </a>
-      </li>
-      <li class="collection-item">
-        <a href="#">Craig 💪🏾</a>
-      </li>
-
     </ul>
   </div>
 
